[gd_scene load_steps=13 format=4 uid="uid://bo0p8620d0jgq"]

[ext_resource type="Script" path="res://title_scene/scripts/title_scene.gd" id="1_k2t30"]
[ext_resource type="AudioStream" uid="uid://c1yosqlq00g6y" path="res://title_scene/audio/waves.mp3" id="2_e25tv"]
[ext_resource type="PackedScene" uid="uid://6hs251asfay8" path="res://Tile Maps/dungeon-01.tscn" id="3_m8wl5"]
[ext_resource type="AudioStream" uid="uid://bp455vpqpm7ae" path="res://title_scene/audio/menu_focus.wav" id="3_y37kc"]
[ext_resource type="AudioStream" uid="uid://cvb46shwns575" path="res://title_scene/audio/menu_select.wav" id="4_bqpnw"]
[ext_resource type="PackedScene" uid="uid://cj0pgm0sesht8" path="res://Levels/player_spawn.tscn" id="4_g65gl"]
[ext_resource type="Texture2D" uid="uid://3jcct8x38s5l" path="res://title_scene/sprites/title.png" id="5_x52dp"]
[ext_resource type="PackedScene" uid="uid://dxs8784y2k8bo" path="res://Interactables/dungeon/pushable_statue.tscn" id="8_fk5wd"]
[ext_resource type="PackedScene" uid="uid://ddvwvcxel4hc6" path="res://title_scene/splash_scene.tscn" id="8_pb1lk"]

[sub_resource type="Animation" id="Animation_4tidw"]
resource_name = "Default"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}

[sub_resource type="Animation" id="Animation_m20by"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ihyb"]
_data = {
"Default": SubResource("Animation_4tidw"),
"RESET": SubResource("Animation_m20by")
}

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_k2t30")
music = ExtResource("2_e25tv")
button_focus_audio = ExtResource("3_y37kc")
button_press_audio = ExtResource("4_bqpnw")

[node name="Dungeon_01_TileMap" parent="." instance=ExtResource("3_m8wl5")]
position = Vector2(-16, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAcAAAABAAAAAAAKAAcAAAACAAAAAAAKAAcAAAADAAAAAAAJAAAAAAANAAAAAAAKAAcAAAAOAAAAAAAKAAcAAAAPAAAAAAAKAAcAAAAEAAAAAAAEAAUAAAAFAAAAAAAHAAUAAAAGAAAAAAAMAAAAAAAHAAAAAAAEAAUAAAAIAAAAAAAHAAUAAAAJAAAAAAAMAAAAAAAKAAAAAAAEAAUAAAALAAAAAAAHAAUAAAAMAAAAAAAPAAAAAAAAAAEAAAAKAAcAAAAAAAIAAAAMAAAAAAAAAAMAAAAMAAEAAAAAAAQAAAAMAAIAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAKAAYAAAAAAAgAAAAMAAcAAAAAAAkAAAAMAAcAAAAAAAoAAAAMAAcAAAAAAAsAAAAMAAcAAAAAAAwAAAAMAAcAAAAPAAEAAAAKAAcAAAAPAAIAAAAMAAAAAAAPAAMAAAAMAAEAAAAPAAQAAAAMAAIAAAAPAAUAAAABAAEAAAAPAAYAAAABAAIAAAAPAAcAAAAOAAYAAAAPAAgAAAAPAAcAAAAPAAkAAAAPAAcAAAAPAAoAAAAPAAcAAAAPAAsAAAAPAAcAAAAPAAwAAAAPAAcAAAAAAA0AAAAMAAcAAAABAA0AAAAMAAcAAAACAA0AAAAJAAcAAAANAA0AAAANAAcAAAAOAA0AAAAOAAcAAAAPAA0AAAAPAAcAAAAIAA0AAAAPAAcAAAAJAA0AAAAJAAcAAAAKAA0AAAAKAAcAAAALAA0AAAALAAcAAAAMAA0AAAAMAAcAAAADAA0AAAAKAAcAAAAEAA0AAAALAAcAAAAFAA0AAAAMAAcAAAAGAA0AAAANAAcAAAAHAA0AAAAOAAcAAAAGAAsAAAANAAcAAAAGAAwAAAANAAcAAAAHAAsAAAAOAAcAAAAHAAwAAAAOAAcAAAAIAAsAAAAPAAcAAAAIAAwAAAAPAAcAAAAJAAsAAAAJAAcAAAAJAAwAAAAJAAcAAAAKAAsAAAAKAAcAAAAKAAwAAAAKAAcAAAALAAsAAAALAAcAAAALAAwAAAALAAcAAAAMAAsAAAAMAAcAAAAMAAwAAAAMAAcAAAANAAsAAAANAAcAAAANAAwAAAANAAcAAAAOAAsAAAAOAAcAAAAOAAwAAAAOAAcAAAAGAAEAAAAMAAEAAAAGAAIAAAAMAAIAAAAHAAEAAAAEAAYAAAAHAAIAAAAEAAcAAAAIAAEAAAAHAAYAAAAIAAIAAAAHAAcAAAAJAAEAAAAMAAEAAAAJAAIAAAAMAAIAAAABAAEAAAAKAAcAAAABAAIAAAAMAAAAAAACAAEAAAAKAAcAAAACAAIAAAAMAAAAAAANAAEAAAAKAAcAAAANAAIAAAAMAAAAAAAOAAEAAAAKAAcAAAAOAAIAAAAMAAAAAAAFAAsAAAAMAAcAAAAFAAwAAAAMAAcAAAAEAAsAAAALAAcAAAAEAAwAAAALAAcAAAADAAsAAAAKAAcAAAADAAwAAAAKAAcAAAACAAsAAAAJAAcAAAACAAwAAAAJAAcAAAABAAsAAAAMAAcAAAABAAwAAAAMAAcAAAABAAoAAAAMAAcAAAACAAoAAAAJAAcAAAABAAkAAAAMAAcAAAACAAkAAAAJAAcAAAABAAgAAAAMAAcAAAACAAgAAAAJAAcAAAABAAcAAAALAAYAAAACAAcAAAAMAAYAAAABAAYAAAABAAEAAAACAAYAAAACAAEAAAABAAUAAAABAAAAAAACAAUAAAACAAAAAAABAAQAAAAMAAIAAAACAAQAAAAMAAIAAAABAAMAAAAMAAEAAAACAAMAAAAMAAEAAAANAAMAAAAMAAEAAAAOAAMAAAAMAAEAAAANAAQAAAAMAAIAAAAOAAQAAAAMAAIAAAANAAUAAAACAAAAAAAOAAUAAAADAAAAAAANAAYAAAACAAEAAAAOAAYAAAADAAEAAAANAAcAAAAMAAYAAAAOAAcAAAANAAYAAAANAAgAAAANAAcAAAAOAAgAAAAOAAcAAAANAAkAAAANAAcAAAAOAAkAAAAOAAcAAAANAAoAAAANAAcAAAAOAAoAAAAOAAcAAAAKAAEAAAANAAEAAAAKAAIAAAANAAIAAAALAAEAAAAOAAEAAAALAAIAAAAOAAIAAAAMAAEAAAAPAAIAAAAMAAIAAAACAAQAAAAFAAEAAAALAAEAAAAFAAIAAAALAAIAAAAEAAEAAAAKAAEAAAAEAAIAAAAKAAIAAAADAAEAAAAJAAIAAAADAAIAAAADAAQAAAAFAAoAAAAMAAcAAAAMAAoAAAAMAAcAAAALAAoAAAALAAcAAAAKAAoAAAAKAAcAAAAJAAoAAAAJAAcAAAAIAAkAAAAPAAcAAAAHAAgAAAAOAAcAAAAGAAgAAAANAAcAAAAGAAkAAAANAAcAAAAHAAkAAAAOAAcAAAAIAAoAAAAPAAcAAAAHAAoAAAAOAAcAAAAGAAoAAAANAAcAAAAEAAoAAAALAAcAAAADAAoAAAAKAAcAAAADAAkAAAAKAAcAAAADAAgAAAAKAAcAAAADAAMAAAAMAAEAAAADAAQAAAAMAAIAAAADAAUAAAAMAAMAAAADAAYAAAAMAAMAAAADAAcAAAAKAAYAAAAEAAMAAAAHAAMAAAAFAAMAAAALAAMAAAAGAAMAAAAMAAMAAAAHAAMAAAAMAAMAAAAIAAMAAAABAAEAAAAJAAMAAAAMAAMAAAAKAAMAAAANAAMAAAALAAMAAAAFAAMAAAAMAAMAAAAMAAEAAAAMAAQAAAAMAAIAAAAMAAUAAAABAAAAAAAMAAYAAAABAAEAAAAMAAcAAAALAAYAAAAMAAgAAAAMAAcAAAAMAAkAAAAMAAcAAAALAAkAAAALAAcAAAAKAAkAAAAKAAcAAAAKAAgAAAAKAAcAAAAKAAcAAAAAAAcAAAAKAAYAAAAMAAMAAAAKAAUAAAAMAAMAAAAKAAQAAAAEAAQAAAALAAQAAAAFAAQAAAALAAUAAAAMAAMAAAALAAYAAAAMAAMAAAALAAcAAAADAAcAAAALAAgAAAALAAcAAAAJAAkAAAAJAAcAAAAJAAgAAAAJAAcAAAAJAAcAAAANAAYAAAAJAAYAAAAMAAMAAAAJAAUAAAACAAIAAAAJAAQAAAAMAAMAAAAIAAQAAAAMAAMAAAAIAAUAAAABAAIAAAAIAAYAAAAMAAMAAAAIAAcAAAAMAAYAAAAIAAgAAAAPAAcAAAAHAAYAAAABAAEAAAAHAAUAAAAMAAMAAAAHAAQAAAAMAAMAAAAGAAQAAAAMAAMAAAAGAAUAAAAMAAMAAAAGAAYAAAAAAAIAAAAGAAcAAAANAAYAAAAFAAgAAAAMAAcAAAAFAAcAAAADAAcAAAAFAAYAAAAMAAMAAAAFAAUAAAAMAAMAAAAFAAQAAAAIAAQAAAAFAAkAAAAMAAcAAAAEAAkAAAALAAcAAAAEAAgAAAALAAcAAAAEAAcAAAAAAAcAAAAEAAYAAAAMAAMAAAAEAAUAAAAMAAMAAAAEAAQAAAAHAAQAAAAHAAcAAAAOAAYAAAA=")
rendering_quadrant_size = 32

[node name="Props" type="Node" parent="."]

[node name="PushableStatue" parent="Props" instance=ExtResource("8_fk5wd")]
position = Vector2(351, 199)
pushable = false

[node name="PushableStatue2" parent="Props" instance=ExtResource("8_fk5wd")]
position = Vector2(126, 199)
pushable = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(239, 97)
texture = ExtResource("5_x52dp")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_8ihyb")
}
autoplay = "Default"

[node name="ButtonNew" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 24.0
offset_right = 65.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "new game"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 56.0
offset_right = 65.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "continue
"

[node name="SplashScene" parent="CanvasLayer" instance=ExtResource("8_pb1lk")]

[node name="PlayerSpawn" parent="." instance=ExtResource("4_g65gl")]
position = Vector2(241, 123)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
bus = &"SFX"
